# FastAPIExample

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
apibase/: config.py  main.py
apibase/api/: __init__.py
apibase/data/: __init__.py
apibase/models/: __init__.py
