[tool.poetry]
name = "apibase"
version = "0.1.0"
description = ""
authors = ["Iacopo Spalletti <i.spalletti@nephila.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.0"}
uvicorn = "^0.23.2"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
